# AIFO

./: .gitignore  LICENSE  README.md  dialogflow_client.py  environment.yml  main.py  pyproject.toml
aifo/: main.py
aifo/clients/: dialogflow_client.py  dialogflow_conversationmanager.py  youtube_client.py
aifo/gui/: ChatWindow.py  ChatWindowFunctions.py
aifo/youtube_downloader/: df_conversation_manager.py  youtube_ai_downloader.py  youtube_download_manager.py
archiv/: environment.yml  main.py
gui/: ChatWindow.py  ChatWindowFunctions.py
